# meme-bot

./: .gitignore  Cargo.toml  README.md  example_config.toml
src/: config.rs  imageutil.rs  main.rs  parse.rs  template.rs
templates/: bernie.toml  bigmistakes.toml  bouncer.toml  brain.toml  cancer.toml  condomfails.toml  disabilities.toml  dog.toml  drake.toml  floor.toml  floor2.toml  goodshit.toml  handicap.toml  help.toml  hypestand.toml  note.toml  patrig.toml  powder.toml  rare.toml  rollsafe.toml  scroll.toml  shake.toml  speak.toml  thatguy.toml  trap.toml  trump.toml  vangogh.toml  wheeze.toml  whowouldwin.toml  woke.toml
